test_scores/negative_dimers/features/Q12770.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q12770.pkl.xz